--- a/clase-7/views/index.ejs
+++ b/clase-7/views/index.ejs
@@ -102,7 +102,7 @@
 
           <div class="form-container">
             <form id="register-form">
-              <h2>Login</h2>
+              <h2>Register</h2>
               <label for="register-username">Username</label>
               <input type="text" id="register-username" name="username" required>
 
